Fix visibility

--- a/src/css/sections/_contact.scss
+++ b/src/css/sections/_contact.scss
@@ -121,7 +121,7 @@
           }
         }
 
-        &.button-input {
+        .button-input {
           grid-area: button;
 
           .btn {
